# Daemon-Accord

./: .gitignore  DATA_ROOM_CHECKLIST.md  DEVELOPMENT_WORKFLOW.md  LICENSE  MIGRATION_EXECUTION_PLAN.md  PRODUCTION_READINESS_REPORT.md  README.md  cloudbuild.yaml  docker-compose.prod-enterprise.yml  docker-compose.prod-medium.yml  docker-compose.prod.yml  docker-compose.yml
.git.backup/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  config  description  index
01-Core-Execution-Engine/: Dockerfile  README.md
02-Safety-Observability/: README.md
03-Intelligence-Memory-Service/: Dockerfile
04-Control-Plane-Orchestrator/: .gitignore  CHANGELOG.md  Dockerfile  MIGRATIONS.md  OPERATIONAL_CHECKLIST.md  OPERATIONAL_STATUS.md  OPTION_C_COMPLETE.md  PERFORMANCE_BASELINE.md  (+7 more)
21-Control-Center/: README.md  pyproject.toml
21-Control-Center/docs/adr/: 0001-control-center-scaffold.md  0002-control-center-vs-control-plane.md
21-Control-Center/src/control_center/: __init__.py  main.py
21-Control-Center/tests/: test_smoke_imports.py
21-Control-Center/web/: README.md  package.json
21-Control-Center/web/src/app/(shell)/: layout.tsx  page.tsx
21-Control-Center/web/src/app/(shell)/connectors/: page.tsx
21-Control-Center/web/src/app/(shell)/runs/: page.tsx
21-Control-Center/web/src/app/(shell)/settings/: page.tsx
21-Control-Center/web/src/app/(shell)/workflows/: page.tsx
21-Control-Center/web/src/components/shell/: Shell.tsx  Sidebar.tsx  TopBar.tsx
21-Control-Center/web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx
21-Control-Center/web/tests/: smoke.test.ts
(+197 files in other folders)
